--- a/packages/orbit-design-tokens/output/theo-spec.less
+++ b/packages/orbit-design-tokens/output/theo-spec.less
@@ -1,4 +1,3 @@
-
 @background-button-link-secondary-active: rgb(214, 222, 230);
 @padding-input-normal: 0 12px;
 @width-modal-small: 540px;
@@ -7,7 +6,7 @@
 @border-color-button-facebook-bordered-active: rgb(53, 79, 136);
 @height-button-normal: 44px;
 @color-icon-warning: rgb(223, 123, 0);
-@font-size-form-label: 14px;
+@font-size-form-label: 15px;
 @palette-cloud-light-hover: rgb(229, 234, 239);
 @color-text-button-warning-active: rgb(255, 255, 255);
 @palette-red-light: rgb(250, 234, 234);
@@ -29,7 +28,7 @@
 @palette-product-normal-hover: rgb(0, 149, 128);
 @space-xx-small: 4px;
 @color-text-button-google-active: rgb(11, 12, 15);
-@font-size-input-normal: 14px;
+@font-size-input-normal: 15px;
 @color-text-button-google-hover: rgb(24, 27, 32);
 @palette-product-normal-active: rgb(0, 132, 114);
 @line-height-heading-title2: 28px;
@@ -63,7 +62,7 @@
 @color-text-secondary: rgb(79, 94, 113);
 @color-text-link-primary-hover: rgb(0, 165, 142);
 @color-text-button-link-secondary-hover: rgb(24, 27, 32);
-@font-size-text-normal: 14px;
+@font-size-text-normal: 15px;
 @palette-green-dark-active: rgb(31, 81, 38);
 @border-color-button-primary-bordered: rgb(0, 165, 142);
 @border-color-button-warning-bordered-active: rgb(178, 98, 0);
@@ -76,12 +75,13 @@
 @opacity-overlay: "0.8";
 @width-breakpoint-desktop: 992;
 @border-style-input: "solid";
-@font-size-button-small: 12px;
+@font-size-button-small: 13px;
 @border-radius-normal: 3px;
 @border-radius-badge: 12px;
 @color-text-button-warning-bordered: rgb(223, 123, 0);
 @background-button-bundle-medium-hover: "linear-gradient(to top right, #2D1393 0%, #7343AA 100%)";
-@box-shadow-overlay: 0px 12px 24px -4px rgba(37, 42, 49, 0.24), 0px 8px 60px 0px rgba(37, 42, 49, 0.32);
+@box-shadow-overlay: 0px 12px 24px -4px rgba(37, 42, 49, 0.24),
+  0px 8px 60px 0px rgba(37, 42, 49, 0.32);
 @color-text-tag-selected: rgb(186, 199, 213);
 @border-color-button-success-bordered: rgb(40, 161, 56);
 @background-switch-checked: rgb(1, 114, 203);
@@ -114,7 +114,8 @@
 @font-weight-table-head: "700";
 @palette-blue-light-active: rgb(199, 228, 250);
 @border-color-checkbox-radio-active: rgb(37, 42, 49);
-@box-shadow-action-active: 0px 1px 4px 0px rgba(37, 42, 49, 0.16), 0px 4px 8px 0px rgba(37, 42, 49, 0.12);
+@box-shadow-action-active: 0px 1px 4px 0px rgba(37, 42, 49, 0.16),
+  0px 4px 8px 0px rgba(37, 42, 49, 0.12);
 @line-height-heading: "1.2";
 @font-weight-heading-display: "700";
 @border-color-input-error-hover: rgb(185, 25, 25);
@@ -148,10 +149,10 @@
 @color-text-button-facebook-bordered-hover: rgb(56, 84, 144);
 @border-color-button-critical-bordered-hover: rgb(185, 25, 25);
 @space-xxx-large: 52px;
-@font-size-button-normal: 14px;
+@font-size-button-normal: 15px;
 @border-radius-small: 2px;
 @palette-ink-normal-hover: rgb(62, 78, 99);
-@font-size-text-small: 12px;
+@font-size-text-small: 13px;
 @color-text-link-secondary: rgb(37, 42, 49);
 @color-icon-info: rgb(1, 114, 203);
 @padding-button-normal: 0 16px;
@@ -211,7 +212,7 @@
 @height-stopover-arrow: 7px;
 @border-color-button-google-bordered: rgb(37, 42, 49);
 @background-tag-selected-active: rgb(11, 12, 15);
-@font-size-input-small: 14px;
+@font-size-input-small: 15px;
 @color-form-label: rgb(37, 42, 49);
 @color-icon-radio-button-disabled: rgb(79, 94, 113);
 @color-text-button-white-active: rgb(11, 12, 15);
@@ -236,7 +237,7 @@
 @border-radius-circle: 50%;
 @color-text-button-critical-subtle: rgb(151, 12, 12);
 @palette-white: rgb(255, 255, 255);
-@font-size-heading-title4: 14px;
+@font-size-heading-title4: 15px;
 @color-placeholder-input-error: rgb(210, 28, 28);
 @color-icon-input: rgb(186, 199, 213);
 @background-button-info: rgb(1, 114, 203);
@@ -255,7 +256,7 @@
 @border-color-button-google-bordered-hover: rgb(24, 27, 32);
 @background-button-primary-subtle: rgb(225, 244, 243);
 @color-text-button-primary-subtle-hover: rgb(0, 112, 96);
-@font-size-heading-title5: 12px;
+@font-size-heading-title5: 13px;
 @background-button-white-active: rgb(229, 234, 239);
 @color-text-critical: rgb(210, 28, 28);
 @palette-orange-light-hover: rgb(252, 236, 218);
@@ -385,7 +386,7 @@
 @background-button-facebook-hover: rgb(56, 84, 144);
 @border-color-checkbox-radio-focus: rgb(1, 114, 203);
 @background-button-bundle-medium: "linear-gradient(to top right, #3719AB 0%, #8539DB 100%)";
-@font-size-message: 14px;
+@font-size-message: 15px;
 @font-weight-heading-title4: "500";
 @border-color-button-success-bordered-hover: rgb(35, 139, 49);
 @width-badge-circled: 24px;
@@ -421,7 +422,7 @@
 @opacity-button-disabled: "0.3";
 @background-button-success-hover: rgb(35, 139, 49);
 @border-color-table-cell: rgb(186, 199, 213);
-@font-size-form-feedback: 12px;
+@font-size-form-feedback: 13px;
 @border-color-button-critical-bordered-active: rgb(157, 21, 21);
 @color-text-button-facebook-bordered-active: rgb(53, 79, 136);
 @palette-red-darker: rgb(118, 9, 9);
@@ -506,7 +507,8 @@
 @color-text-info: rgb(1, 114, 203);
 @background-button-link-critical-active: rgb(243, 206, 206);
 @background-button-google-active: rgb(214, 222, 230);
-@box-shadow-raised-reverse: 0px -4px 8px 0px rgba(37, 42, 49, 0.16), 0px -8px 24px 0px rgba(37, 42, 49, 0.24);
+@box-shadow-raised-reverse: 0px -4px 8px 0px rgba(37, 42, 49, 0.16),
+  0px -8px 24px 0px rgba(37, 42, 49, 0.24);
 @font-weight-heading-display-subtitle: "400";
 @color-heading: rgb(37, 42, 49);
 @background-button-critical: rgb(210, 28, 28);
