--- a/packages/orbit-design-tokens/output/theo-spec.styl
+++ b/packages/orbit-design-tokens/output/theo-spec.styl
@@ -132,7 +132,7 @@ $border-width-input-focus = 2px
 $color-text-badge-dark = rgb(255, 255, 255)
 $background-button-primary-subtle-focus = rgb(236, 248, 247)
 $border-color-input-hover = rgb(62, 78, 99)
-$background-button-bundle-top-hover = "linear-gradient(to top right, #171718 0%, #51575C 100%)"
+$background-button-bundle-top-hover = "linear-gradient(to top right, #171718 0%, #51575C  100%)"
 $padding-tag = 8px
 $color-text-badge-warning = rgb(223, 123, 0)
 $background-button-white = rgb(255, 255, 255)
@@ -184,6 +184,7 @@ $padding-loading = 12px
 $background-button-bordered = "transparent"
 $palette-cloud-dark-hover = rgb(166, 182, 200)
 $color-text-button-success-bordered = rgb(40, 161, 56)
+$background-color-tab-bundle-basic = "linear-gradient(80.91deg, #E13E3B 0%, #E87E09 100%)"
 $palette-orange-normal-hover = rgb(201, 111, 0)
 $palette-orange-darker = rgb(128, 63, 0)
 $palette-red-dark = rgb(151, 12, 12)
@@ -261,7 +262,7 @@ $color-text-button-success-bordered-hover = rgb(35, 139, 49)
 $background-tag-hover = rgb(229, 234, 239)
 $font-size-heading-display = 40px
 $color-text-alert-warning = rgb(186, 93, 0)
-$background-button-bundle-basic-hover = "linear-gradient(to top right, #BD2825 0%, #D67000 100%)"
+$background-button-bundle-basic-hover = "linear-gradient(to top right, #BD2825 0%, #BD2825 100%)"
 $text-decoration-text-link-secondary = "underline"
 $padding-button-small-with-icons = 0 8px
 $color-text-badge-success = rgb(40, 161, 56)
@@ -300,7 +301,7 @@ $palette-ink-normal = rgb(79, 94, 113)
 $font-weight-links = "500"
 $color-text-primary = rgb(37, 42, 49)
 $palette-bundle-medium = rgb(59, 30, 176)
-$background-button-bundle-basic-active = "linear-gradient(to top right, #9F1816 0%, #C36802 100%)"
+$background-button-bundle-basic-active = "linear-gradient(to top right, #9F1816 0%, #9F1816 100%)"
 $background-badge-neutral = rgb(245, 247, 249)
 $width-modal-extra-large = 1280px
 $padding-tag-removable = 6px 6px 6px 8px
@@ -322,13 +323,14 @@ $background-service-logo = "transparent"
 $font-family = "'Roboto', -apple-system, '.SFNSText-Regular', 'San Francisco', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', sans-serif"
 $line-height-heading-display-subtitle = 28px
 $background-button-white-hover = rgb(245, 247, 249)
+$background-color-tab-bundle-top = "linear-gradient(80.91deg, #2D2D2E 0%, #696E73 100%)"
 $color-text-button-primary-subtle-active = rgb(0, 127, 109)
 $border-color-button-critical-bordered = rgb(210, 28, 28)
 $color-text-button-facebook-bordered = rgb(59, 89, 152)
 $border-color-button-google-bordered-active = rgb(11, 12, 15)
 $line-height-text-large = 24px
 $color-text-success = rgb(40, 161, 56)
-$background-button-bundle-top = "linear-gradient(to top right, #2D2D2E 0%, #696E73 100%)"
+$background-button-bundle-top = "linear-gradient(to top right, #2D2D2E 0%, #696E73  100%)"
 $border-color-input = rgb(186, 199, 213)
 $palette-orange-light-active = rgb(250, 226, 198)
 $font-weight-heading-title1 = "700"
@@ -392,6 +394,7 @@ $border-color-table-head = rgb(186, 199, 213)
 $color-text-alert-success = rgb(45, 119, 56)
 $background-badge-bundle-basic = "linear-gradient(to top right, #E13E3B 0%, #E87E09 100%)"
 $padding-button-large-with-right-icon = 0 16px 0 28px
+$background-color-tab-bundle-medium = "linear-gradient(80.91deg, #3719AB 0%, #8539DB 100%)"
 $border-color-table = rgb(232, 237, 241)
 $width-breakpoint-large-desktop = 1200
 $palette-blue-darker = rgb(0, 70, 128)
@@ -410,7 +413,7 @@ $color-text-link-primary = rgb(0, 127, 109)
 $color-text-button-white-bordered-active = rgb(255, 255, 255)
 $color-icon-checkbox-radio-disabled = rgb(186, 199, 213)
 $font-size-button-large = 16px
-$background-button-bundle-top-active = "linear-gradient(to top right, #101011 0%, #51575C)"
+$background-button-bundle-top-active = "linear-gradient(to top right, #101011 0%, #51575C  100%)"
 $background-button-google = rgb(245, 247, 249)
 $border-color-input-active = rgb(50, 66, 86)
 $opacity-button-disabled = "0.3"
@@ -487,7 +490,7 @@ $border-color-button-warning-bordered = rgb(223, 123, 0)
 $background-illustration = "transparent"
 $height-input-group-separator-small = 16px
 $text-decoration-text-link-primary = "underline"
-$background-badge-bundle-top = "linear-gradient(to top right, #2D2D2E 0%, #696E73 100%)"
+$background-badge-bundle-top = "linear-gradient(to top right,#2D2D2E 0%, #696E73 100%)"
 $text-decoration-text-link-primary-hover = "none"
 $border-color-button-warning-bordered-hover = rgb(201, 111, 0)
 $padding-button-large-with-left-icon = 0 28px 0 16px
