--- a/packages/orbit-design-tokens/output/theo-spec.cssmodules.css
+++ b/packages/orbit-design-tokens/output/theo-spec.cssmodules.css
@@ -17,9 +17,11 @@
 @value color-alert-icon-info: rgb(1, 114, 203);
 @value palette-blue-normal-hover: rgb(1, 97, 172);
 @value color-text-button-critical: rgb(255, 255, 255);
+@value color-text-button-link-critical-active: rgb(157, 21, 21);
 @value z-index-sticky: "100";
 @value border-color-checkbox-radio: rgb(186, 199, 213);
 @value palette-blue-light: rgb(241, 248, 254);
+@value color-text-button-link-critical-hover: rgb(185, 25, 25);
 @value box-shadow-action: 0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px 1px 4px 0px rgba(37, 42, 49, 0.12);
 @value palette-ink-dark: rgb(37, 42, 49);
 @value color-text-badge-info: rgb(1, 114, 203);
@@ -50,6 +52,7 @@
 @value border-color-button-facebook-bordered-hover: rgb(56, 84, 144);
 @value background-button-google-hover: rgb(229, 234, 239);
 @value box-shadow-raised: 0px 4px 8px 0px rgba(37, 42, 49, 0.16), 0px 8px 24px 0px rgba(37, 42, 49, 0.24);
+@value background-button-link-critical-hover: rgb(248, 226, 226);
 @value background-badge-info: rgb(241, 248, 254);
 @value border-color-tag: rgb(186, 199, 213);
 @value background-button-success: rgb(40, 161, 56);
@@ -246,7 +249,7 @@
 @value palette-white-hover: rgb(245, 247, 249);
 @value font-weight-normal: "400";
 @value color-text-button-critical-subtle-hover: rgb(151, 12, 12);
-@value background-button-link-primary-active: rgb(214, 222, 230);
+@value background-button-link-primary-active: rgb(191, 232, 226);
 @value color-form-label-filled: rgb(79, 94, 113);
 @value palette-green-normal: rgb(40, 161, 56);
 @value line-height-text-normal: 20px;
@@ -347,7 +350,7 @@
 @value palette-white-active: rgb(229, 234, 239);
 @value background-button-secondary: rgb(232, 237, 241);
 @value background-button-info-active: rgb(1, 80, 142);
-@value background-button-link-primary-hover: rgb(229, 234, 239);
+@value background-button-link-primary-hover: rgb(214, 240, 236);
 @value width-icon-medium: 20px;
 @value color-text-badge-neutral: rgb(37, 42, 49);
 @value space-x-small: 8px;
@@ -425,6 +428,7 @@
 @value palette-red-darker: rgb(118, 9, 9);
 @value color-text-white: rgb(255, 255, 255);
 @value box-shadow-fixed-reverse: 0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px -2px 4px 0px rgba(37, 42, 49, 0.12);
+@value background-button-link-critical: "transparent";
 @value background-table-even: rgb(245, 247, 249);
 @value background-button-link-secondary: "transparent";
 @value border-color-button-facebook-bordered: rgb(59, 89, 152);
@@ -445,6 +449,7 @@
 @value box-shadow-button-focus: 0 0 4px 1px rgba(1, 114, 203, 0.3);
 @value palette-blue-light-hover: rgb(222, 240, 252);
 @value border-color-checkbox-radio-hover: rgb(79, 94, 113);
+@value color-text-button-link-critical: rgb(210, 28, 28);
 @value color-text-button-critical-hover: rgb(255, 255, 255);
 @value z-index-modal-overlay: "800";
 @value color-icon-critical: rgb(210, 28, 28);
@@ -499,6 +504,7 @@
 @value palette-green-dark-hover: rgb(39, 104, 49);
 @value font-size-text-large: 16px;
 @value color-text-info: rgb(1, 114, 203);
+@value background-button-link-critical-active: rgb(243, 206, 206);
 @value background-button-google-active: rgb(214, 222, 230);
 @value box-shadow-raised-reverse: 0px -4px 8px 0px rgba(37, 42, 49, 0.16), 0px -8px 24px 0px rgba(37, 42, 49, 0.24);
 @value font-weight-heading-display-subtitle: "400";
