--- a/packages/orbit-design-tokens/output/theo-spec.less
+++ b/packages/orbit-design-tokens/output/theo-spec.less
@@ -40,6 +40,7 @@
 @height-service-logo-large: 48px;
 @background-button-link-secondary-hover: rgb(229, 234, 239);
 @palette-blue-normal-active: rgb(1, 80, 142);
+@background-switch: rgb(186, 199, 213);
 @color-text-button-warning-hover: rgb(255, 255, 255);
 @palette-cloud-light-active: rgb(214, 222, 230);
 @line-height-heading-title3: 24px;
@@ -85,6 +86,7 @@
 @box-shadow-overlay: 0px 12px 24px -4px rgba(37, 42, 49, 0.24), 0px 8px 60px 0px rgba(37, 42, 49, 0.32);
 @color-text-tag-selected: rgb(186, 199, 213);
 @border-color-button-success-bordered: rgb(40, 161, 56);
+@background-switch-checked: rgb(1, 114, 203);
 @palette-orange-dark-active: rgb(149, 74, 0);
 @color-text-button-primary-active: rgb(255, 255, 255);
 @color-text-button-link-primary: rgb(0, 165, 142);
