--- a/packages/orbit-design-tokens/output/theo-spec.sass
+++ b/packages/orbit-design-tokens/output/theo-spec.sass
@@ -429,6 +429,7 @@ $border-color-button-critical-bordered-active: rgb(157, 21, 21)
 $color-text-button-facebook-bordered-active: rgb(53, 79, 136)
 $palette-red-darker: rgb(118, 9, 9)
 $color-text-white: rgb(255, 255, 255)
+$margin-button-icon: 8px
 $box-shadow-fixed-reverse: 0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px -2px 4px 0px rgba(37, 42, 49, 0.12)
 $background-button-link-critical: "transparent"
 $background-table-even: rgb(245, 247, 249)
