--- a/packages/orbit-design-tokens/output/theo-spec.styl
+++ b/packages/orbit-design-tokens/output/theo-spec.styl
@@ -81,6 +81,7 @@ $border-radius-normal = 3px
 $border-radius-badge = 12px
 $color-text-button-warning-bordered = rgb(223, 123, 0)
 $background-button-bundle-medium-hover = "linear-gradient(to top right, #2D1393 0%, #7343AA 100%)"
+$line-height-heading-title6 = 16px
 $box-shadow-overlay = 0px 12px 24px -4px rgba(37, 42, 49, 0.24), 0px 8px 60px 0px rgba(37, 42, 49, 0.32)
 $color-text-tag-selected = rgb(186, 199, 213)
 $border-color-button-success-bordered = rgb(40, 161, 56)
@@ -219,7 +220,7 @@ $background-button-primary-subtle-hover = rgb(214, 240, 236)
 $width-stopover-arrow = 36px
 $palette-orange-light = rgb(254, 242, 230)
 $palette-green-normal-hover = rgb(35, 139, 49)
-$font-size-heading-title3 = 16px
+$font-size-heading-title3 = 18px
 $background-alert-critical = rgb(250, 234, 234)
 $color-text-button-primary-subtle = rgb(0, 122, 105)
 $width-modal-normal = 740px
@@ -236,7 +237,7 @@ $padding-input-small = 0 12px
 $border-radius-circle = 50%
 $color-text-button-critical-subtle = rgb(151, 12, 12)
 $palette-white = rgb(255, 255, 255)
-$font-size-heading-title4 = 15px
+$font-size-heading-title4 = 16px
 $color-placeholder-input-error = rgb(210, 28, 28)
 $color-icon-input = rgb(186, 199, 213)
 $background-button-info = rgb(1, 114, 203)
@@ -255,7 +256,7 @@ $line-height-text-normal = 20px
 $border-color-button-google-bordered-hover = rgb(24, 27, 32)
 $background-button-primary-subtle = rgb(225, 244, 243)
 $color-text-button-primary-subtle-hover = rgb(0, 112, 96)
-$font-size-heading-title5 = 13px
+$font-size-heading-title5 = 15px
 $background-button-white-active = rgb(229, 234, 239)
 $color-text-critical = rgb(210, 28, 28)
 $palette-orange-light-hover = rgb(252, 236, 218)
@@ -269,6 +270,7 @@ $text-decoration-text-link-secondary = "underline"
 $padding-button-small-with-icons = 0 8px
 $color-text-badge-success = rgb(40, 161, 56)
 $color-text-button-info = rgb(255, 255, 255)
+$font-size-heading-title6 = 13px
 $padding-button-normal-with-left-icon = 0 16px 0 12px
 $margin-top-form-feedback = 2px
 $palette-orange-normal = rgb(223, 123, 0)
@@ -419,6 +421,7 @@ $background-button-bundle-top-active = "linear-gradient(to top right, #101011 0%
 $background-button-google = rgb(245, 247, 249)
 $border-color-input-active = rgb(50, 66, 86)
 $opacity-button-disabled = "0.3"
+$font-weight-heading-title6 = "700"
 $background-button-success-hover = rgb(35, 139, 49)
 $border-color-table-cell = rgb(186, 199, 213)
 $font-size-form-feedback = 13px
