feat(tokens): add fontSizeXl token

--- a/packages/orbit-design-tokens/output/theo-spec.styl
+++ b/packages/orbit-design-tokens/output/theo-spec.styl
@@ -130,6 +130,7 @@ $line-height-text = "1.4"
 $background-button-secondary-hover = rgb(220, 227, 233)
 $background-button-link-primary = "transparent"
 $background-button-white-bordered-hover = rgba(255, 255, 255, 0.2)
+$font-size-text-extra-large = 18px
 $padding-tag-with-icon = 6px 8px 6px 6px
 $color-text-button-facebook = rgb(255, 255, 255)
 $border-width-input-focus = 2px
