--- a/packages/orbit-design-tokens/output/theo-spec.cssmodules.css
+++ b/packages/orbit-design-tokens/output/theo-spec.cssmodules.css
@@ -130,6 +130,7 @@
 @value background-button-secondary-hover: rgb(220, 227, 233);
 @value background-button-link-primary: "transparent";
 @value background-button-white-bordered-hover: rgba(255, 255, 255, 0.2);
+@value font-size-text-extra-large: 18px;
 @value padding-tag-with-icon: 6px 8px 6px 6px;
 @value color-text-button-facebook: rgb(255, 255, 255);
 @value border-width-input-focus: 2px;
