feat(tokens): add CountryFlag tokens

--- a/packages/orbit-design-tokens/output/tokens.less
+++ b/packages/orbit-design-tokens/output/tokens.less
@@ -508,6 +508,12 @@
 @height-input-group-separator-normal: 20;
 @height-illustration-small: 90;
 @height-illustration-medium: 200;
+@country-flag-shadow: rgb(37, 42, 49);
+@country-flag-background: transparent;
+@country-flag-small-height: 9px;
+@country-flag-small-width: 16px;
+@country-flag-medium-height: 13px;
+@country-flag-medium-width: 24px;
 @form-box-small-height: 32;
 @form-box-normal-height: 44;
 @form-box-large-height: 52;
