--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -519,6 +519,12 @@ $height-input-group-separator-small: 16px;
 $height-input-group-separator-normal: 20px;
 $height-illustration-small: 90px;
 $height-illustration-medium: 200px;
+$country-flag-shadow: inset 0 0 0 1px rgba(37, 42, 49, 0.1);
+$country-flag-background: transparent;
+$country-flag-small-height: 9px;
+$country-flag-small-width: 16px;
+$country-flag-medium-height: 13px;
+$country-flag-medium-width: 24px;
 $form-box-small-height: 32px;
 $form-box-normal-height: 44px;
 $form-box-large-height: 52px;
