fix(tokens): fix Heading line-height values
chore(tokens): fix typography to match figma

chore(tokens): fix widthCarrierLogo

test: update snapshots

feat(tokens): add foreground for Loading

test: update snapshots

feat(tokens): add extra-large line-height token

chore(tokens): fix deprecated tokens for Heading

fix(tokens): fix formElementDisabledForeground token value

chore(tokens): bump version to 5.0.0-beta.1

chore(tailwind): bump version to 1.0.0-beta.4

chore: fix yarn.lock

chore(tailwind): add loading colors to export

chore(tailwind): bump version to 1.0.0-beta.5

chore: update tokens version for docs

--- a/packages/orbit-design-tokens/output/tokens.css
+++ b/packages/orbit-design-tokens/output/tokens.css
@@ -579,7 +579,7 @@
   --form-box-large-height: 52;
   --form-element-background: rgb(255, 255, 255);
   --form-element-disabled-background: rgb(232, 237, 241);
-  --form-element-disabled-foreground: rgb(186, 199, 213);
+  --form-element-disabled-foreground: rgb(79, 94, 113);
   --form-element-disabled-opacity: 50;
   --form-element-border-color: rgb(186, 199, 213);
   --form-element-border-color-hover: rgb(166, 182, 200);
@@ -618,22 +618,22 @@
   --heading-display-subtitle-line-height: 28;
   --heading-title-1-font-size: 28;
   --heading-title-1-font-weight: 700;
-  --heading-title-1-line-height: 36;
+  --heading-title-1-line-height: 32;
   --heading-title-2-font-size: 22;
   --heading-title-2-font-weight: 500;
   --heading-title-2-line-height: 28;
-  --heading-title-3-font-size: 16;
+  --heading-title-3-font-size: 18;
   --heading-title-3-font-weight: 500;
   --heading-title-3-line-height: 24;
-  --heading-title-4-font-size: 15;
-  --heading-title-4-font-weight: 500;
+  --heading-title-4-font-size: 16;
+  --heading-title-4-font-weight: 700;
   --heading-title-4-line-height: 20;
-  --heading-title-5-font-size: 13;
+  --heading-title-5-font-size: 15;
   --heading-title-5-font-weight: 700;
   --heading-title-5-line-height: 20;
   --heading-title-6-font-size: 13;
   --heading-title-6-font-weight: 700;
-  --heading-title-6-line-height: 20;
+  --heading-title-6-line-height: 16;
   --heading-foreground: rgb(37, 42, 49);
   --heading-foreground-inverted: rgb(255, 255, 255);
   --font-weight-heading-display: 700;
@@ -649,12 +649,12 @@
   --line-height-heading: 1.2;
   --line-height-heading-display: 44;
   --line-height-heading-display-subtitle: 28;
-  --line-height-heading-title-1: 36;
+  --line-height-heading-title-1: 32;
   --line-height-heading-title-2: 28;
   --line-height-heading-title-3: 24;
   --line-height-heading-title-4: 20;
   --line-height-heading-title-5: 20;
-  --line-height-heading-title-6: 20;
+  --line-height-heading-title-6: 16;
   --icon-primary-foreground: rgb(37, 42, 49);
   --icon-secondary-foreground: rgb(79, 94, 113);
   --icon-tertiary-foreground: rgb(186, 199, 213);
@@ -671,6 +671,7 @@
   --illustration-medium-height: 200;
   --illustration-large-height: 280;
   --illustration-display-height: 460;
+  --loading-foreground: rgb(186, 199, 213);
   --modal-extra-small-width: 360;
   --modal-small-width: 540;
   --modal-normal-width: 740;
@@ -879,6 +880,7 @@
   --line-height-text-small: 16;
   --line-height-text-normal: 20;
   --line-height-text-large: 24;
+  --line-height-text-extra-large: 24;
   --font-weight-normal: 400;
   --font-weight-medium: 500;
   --font-weight-bold: 700;
