--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -524,7 +524,7 @@ $form-box-normal-height: 44px;
 $form-box-large-height: 52px;
 $form-element-background: rgb(255, 255, 255);
 $form-element-disabled-background: rgb(232, 237, 241);
-$form-element-disabled-foreground: rgb(186, 199, 213);
+$form-element-disabled-foreground: rgb(79, 94, 113);
 $form-element-disabled-opacity: 0.5;
 $form-element-border-color: rgb(186, 199, 213);
 $form-element-border-color-hover: rgb(166, 182, 200);
@@ -553,22 +553,22 @@ $heading-display-subtitle-font-weight: 400;
 $heading-display-subtitle-line-height: 28px;
 $heading-title-1-font-size: 28px;
 $heading-title-1-font-weight: 700;
-$heading-title-1-line-height: 36px;
+$heading-title-1-line-height: 32px;
 $heading-title-2-font-size: 22px;
 $heading-title-2-font-weight: 500;
 $heading-title-2-line-height: 28px;
-$heading-title-3-font-size: 16px;
+$heading-title-3-font-size: 18px;
 $heading-title-3-font-weight: 500;
 $heading-title-3-line-height: 24px;
-$heading-title-4-font-size: 15px;
-$heading-title-4-font-weight: 500;
+$heading-title-4-font-size: 16px;
+$heading-title-4-font-weight: 700;
 $heading-title-4-line-height: 20px;
-$heading-title-5-font-size: 13px;
+$heading-title-5-font-size: 15px;
 $heading-title-5-font-weight: 700;
 $heading-title-5-line-height: 20px;
 $heading-title-6-font-size: 13px;
 $heading-title-6-font-weight: 700;
-$heading-title-6-line-height: 20px;
+$heading-title-6-line-height: 16px;
 $heading-foreground: rgb(37, 42, 49);
 $heading-foreground-inverted: rgb(255, 255, 255);
 $font-weight-heading-display: 700;
@@ -584,12 +584,12 @@ $font-weight-links: 500;
 $line-height-heading: 1.2;
 $line-height-heading-display: 44px;
 $line-height-heading-display-subtitle: 28px;
-$line-height-heading-title-1: 36px;
+$line-height-heading-title-1: 32px;
 $line-height-heading-title-2: 28px;
 $line-height-heading-title-3: 24px;
 $line-height-heading-title-4: 20px;
 $line-height-heading-title-5: 20px;
-$line-height-heading-title-6: 20px;
+$line-height-heading-title-6: 16px;
 $icon-primary-foreground: rgb(37, 42, 49);
 $icon-secondary-foreground: rgb(79, 94, 113);
 $icon-tertiary-foreground: rgb(186, 199, 213);
@@ -606,6 +606,7 @@ $illustration-small-height: 120px;
 $illustration-medium-height: 200px;
 $illustration-large-height: 280px;
 $illustration-display-height: 460px;
+$loading-foreground: rgb(186, 199, 213);
 $modal-extra-small-width: 360px;
 $modal-small-width: 540px;
 $modal-normal-width: 740px;
@@ -820,6 +821,7 @@ $line-height-text: 1.4;
 $line-height-text-small: 16px;
 $line-height-text-normal: 20px;
 $line-height-text-large: 24px;
+$line-height-text-extra-large: 24px;
 $font-weight-normal: 400;
 $font-weight-medium: 500;
 $font-weight-bold: 700;
