feat(tokens): remove White token
BREAKING CHANGE: paletteWhite token was removed. whiteHover and whiteActive are now whiteNormalActive and whiteNormalHover

--- a/packages/orbit-design-tokens/output/tokens.less
+++ b/packages/orbit-design-tokens/output/tokens.less
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Wed, 26 Jul 2023 13:12:51 GMT
+// Generated on Fri, 28 Jul 2023 12:57:51 GMT
 
 @padding-alert: 16;
 @padding-alert-with-icon: 12;
@@ -783,10 +783,9 @@
 @palette-social-facebook: rgb(59, 89, 152);
 @palette-social-facebook-hover: rgb(56, 84, 144);
 @palette-social-facebook-active: rgb(53, 79, 136);
-@palette-white: rgb(255, 255, 255);
 @palette-white-normal: rgb(255, 255, 255);
-@palette-white-hover: rgb(241, 244, 247);
-@palette-white-active: rgb(231, 236, 241);
+@palette-white-normal-hover: rgb(241, 244, 247);
+@palette-white-normal-active: rgb(231, 236, 241);
 @space-x-x-x-small: 2;
 @space-x-x-small: 4;
 @space-x-small: 8;
