--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -798,10 +798,9 @@ $palette-red-darker: rgb(118, 9, 9);
 $palette-social-facebook: rgb(59, 89, 152);
 $palette-social-facebook-hover: rgb(56, 84, 144);
 $palette-social-facebook-active: rgb(53, 79, 136);
-$palette-white: rgb(255, 255, 255);
 $palette-white-normal: rgb(255, 255, 255);
-$palette-white-hover: rgb(241, 244, 247);
-$palette-white-active: rgb(231, 236, 241);
+$palette-white-normal-hover: rgb(241, 244, 247);
+$palette-white-normal-active: rgb(231, 236, 241);
 $space-x-x-x-small: 2px;
 $space-x-x-small: 4px;
 $space-x-small: 8px;
