--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -64,6 +64,12 @@ $background-button-link-secondary-active: rgb(214, 222, 230);
 $background-button-bundle-basic: linear-gradient(to top right, #e13e3b 0%, #e87e09 100%);
 $background-button-bundle-basic-hover: linear-gradient(to top right, #bd2825 0%, #d67000 100%);
 $background-button-bundle-basic-active: linear-gradient(to top right, #9f1816 0%, #c36802 100%);
+$background-button-bundle-medium: linear-gradient(to top right, #3719ab 0%, #8539db 100%);
+$background-button-bundle-medium-hover: linear-gradient(to top right, #bd2825 0%, #d67000 100%);
+$background-button-bundle-medium-active: linear-gradient(to top right, #250f79 0%, #5a3485 100%);
+$background-button-bundle-top: linear-gradient(to top right, #2d2d2e 0%, #696e73 100%);
+$background-button-bundle-top-hover: linear-gradient(to top right, #171718 0%, #51575c 100%);
+$background-button-bundle-top-active: linear-gradient(to top right, #101011 0%, #51575c);
 $background-button-critical-subtle: rgb(250, 234, 234);
 $background-button-critical-subtle-hover: rgb(248, 226, 226);
 $background-button-critical-subtle-active: rgb(243, 206, 206);
@@ -105,12 +111,6 @@ $background-button-facebook-active: rgb(53, 79, 136);
 $background-button-google: rgb(245, 247, 249);
 $background-button-google-hover: rgb(229, 234, 239);
 $background-button-google-active: rgb(214, 222, 230);
-$background-bundle-medium: linear-gradient(to top right, #3719ab 0%, #8539db 100%);
-$background-bundle-medium-hover: linear-gradient(to top right, #bd2825 0%, #d67000 100%);
-$background-bundle-medium-active: linear-gradient(to top right, #250f79 0%, #5a3485 100%);
-$background-bundle-top: linear-gradient(to top right, #2d2d2e 0%, #696e73 100%);
-$background-bundle-top-hover: linear-gradient(to top right, #171718 0%, #51575c 100%);
-$background-bundle-top-active: linear-gradient(to top right, #101011 0%, #51575c);
 $background-card: rgb(255, 255, 255);
 $background-carrier-logo: transparent;
 $background-country-flag: transparent;
@@ -737,6 +737,8 @@ $palette-blue-dark: rgb(0, 90, 163);
 $palette-blue-dark-hover: rgb(0, 79, 143);
 $palette-blue-dark-active: rgb(0, 62, 112);
 $palette-blue-darker: rgb(0, 70, 128);
+$palette-bundle-basic: rgb(215, 51, 28);
+$palette-bundle-medium: rgb(59, 30, 176);
 $palette-cloud-light: rgb(245, 247, 249);
 $palette-cloud-light-hover: rgb(229, 234, 239);
 $palette-cloud-light-active: rgb(214, 222, 230);
