feat(tokens): add Text and TextLink related tokens

--- a/packages/orbit-design-tokens/output/tokens.scss
+++ b/packages/orbit-design-tokens/output/tokens.scss
@@ -103,8 +103,8 @@ $background-button-white: rgb(255, 255, 255);
 $background-button-white-hover: rgb(245, 247, 249);
 $background-button-white-active: rgb(229, 234, 239);
 $background-button-white-bordered: transparent;
-$background-button-white-bordered-hover: rgb(255, 255, 255);
-$background-button-white-bordered-active: rgb(255, 255, 255);
+$background-button-white-bordered-hover: rgba(255, 255, 255, 0.2);
+$background-button-white-bordered-active: rgba(255, 255, 255, 0.2);
 $background-button-facebook: rgb(59, 89, 152);
 $background-button-facebook-hover: rgb(56, 84, 144);
 $background-button-facebook-active: rgb(53, 79, 136);
@@ -384,7 +384,7 @@ $button-primary-background-active: rgb(0, 132, 114);
 $button-primary-foreground: rgb(255, 255, 255);
 $button-primary-foreground-hover: rgb(255, 255, 255);
 $button-primary-foreground-active: rgb(255, 255, 255);
-$button-primary-border-color-focus: rgb(0, 165, 142);
+$button-primary-border-color-focus: rgba(0, 165, 142, 0.5);
 $button-secondary-background: rgb(232, 237, 241);
 $button-secondary-background-hover: rgb(220, 227, 233);
 $button-secondary-background-active: rgb(202, 212, 222);
@@ -409,7 +409,7 @@ $button-white-background-active: rgb(229, 234, 239);
 $button-white-foreground: rgb(37, 42, 49);
 $button-white-foreground-hover: rgb(24, 27, 32);
 $button-white-foreground-active: rgb(11, 12, 15);
-$button-white-border-color-focus: rgb(231, 236, 241);
+$button-white-border-color-focus: rgba(231, 236, 241, 0.5);
 $box-shadow-button-focus: 0 0 4px 1px rgba(1, 114, 203, 0.3);
 $border-color-button-primary-bordered: rgb(0, 165, 142);
 $border-color-button-primary-bordered-hover: rgb(0, 149, 128);
@@ -620,7 +620,7 @@ $social-button-apple-background-active: rgb(50, 66, 86);
 $social-button-apple-foreground: rgb(255, 255, 255);
 $social-button-apple-foreground-hover: rgb(255, 255, 255);
 $social-button-apple-foreground-active: rgb(255, 255, 255);
-$social-button-apple-border-color-focus: rgb(105, 125, 149);
+$social-button-apple-border-color-focus: rgba(105, 125, 149, 0.5);
 $social-button-apple-icon-foreground: rgb(255, 255, 255);
 $social-button-facebook-background: rgb(59, 89, 152);
 $social-button-facebook-background-hover: rgb(56, 84, 144);
@@ -642,7 +642,7 @@ $social-button-twitter-background-active: rgb(202, 212, 222);
 $social-button-twitter-foreground: rgb(79, 94, 113);
 $social-button-twitter-foreground-hover: rgb(79, 94, 113);
 $social-button-twitter-foreground-active: rgb(79, 94, 113);
-$social-button-twitter-border-color-focus: rgb(105, 125, 149);
+$social-button-twitter-border-color-focus: rgba(105, 125, 149, 0.5);
 $social-button-twitter-icon-foreground: rgb(0, 172, 238);
 $tab-bundle-basic-background: linear-gradient(80.91deg, #e13e3b 0%, #e87e09 100%);
 $tab-bundle-basic-background-hover: rgba(215, 51, 28, 0.08);
@@ -660,21 +660,43 @@ $tag-neutral-background-hover: rgb(220, 227, 233);
 $tag-neutral-background-active: rgb(202, 212, 222);
 $tag-neutral-foreground: rgb(37, 42, 49);
 $text-link-primary-foreground: rgb(0, 122, 105);
+$text-link-primary-foreground-hover: rgb(0, 112, 96);
+$text-link-primary-foreground-active: rgb(0, 102, 87);
 $text-link-secondary-foreground: rgb(37, 42, 49);
-$text-link-foreground-hover: rgb(0, 149, 128);
-$text-link-text-decoration: underline;
-$text-link-text-decoration-hover: none;
-$text-link-font-weight: 500;
+$text-link-secondary-foreground-hover: rgb(0, 112, 96);
+$text-link-secondary-foreground-active: rgb(0, 102, 87);
+$text-link-success-foreground: rgb(45, 119, 56);
+$text-link-success-foreground-hover: rgb(39, 104, 49);
+$text-link-success-foreground-active: rgb(35, 92, 43);
+$text-link-info-foreground: rgb(0, 90, 163);
+$text-link-info-foreground-hover: rgb(0, 79, 143);
+$text-link-info-foreground-active: rgb(0, 70, 128);
+$text-link-warning-foreground: rgb(173, 87, 0);
+$text-link-warning-foreground-hover: rgb(167, 84, 0);
+$text-link-warning-foreground-active: rgb(128, 63, 0);
+$text-link-critical-foreground: rgb(151, 12, 12);
+$text-link-critical-foreground-hover: rgb(137, 11, 11);
+$text-link-critical-foreground-active: rgb(118, 9, 9);
+$text-link-white-foreground: rgb(255, 255, 255);
+$text-link-white-foreground-hover: rgb(225, 244, 243);
+$text-link-white-foreground-active: rgb(225, 244, 243);
 $text-decoration-text-link-primary: underline;
 $text-decoration-text-link-primary-hover: none;
 $text-decoration-text-link-secondary: underline;
 $text-decoration-text-link-secondary-hover: none;
+$text-primary-background: rgba(37, 42, 49, 0.1);
 $text-primary-foreground: rgb(37, 42, 49);
+$text-secondary-background: rgba(79, 94, 113, 0.1);
 $text-secondary-foreground: rgb(79, 94, 113);
+$text-info-background: rgba(1, 114, 203, 0.1);
 $text-info-foreground: rgb(1, 114, 203);
+$text-success-background: rgba(40, 161, 56, 0.1);
 $text-success-foreground: rgb(40, 161, 56);
+$text-warning-background: rgba(223, 123, 0, 0.1);
 $text-warning-foreground: rgb(223, 123, 0);
+$text-critical-background: rgba(210, 28, 28, 0.1);
 $text-critical-foreground: rgb(210, 28, 28);
+$text-white-background: rgba(255, 255, 255, 0.1);
 $text-white-foreground: rgb(255, 255, 255);
 $background-illustration: transparent;
 $border-radius-circle: 50%;
